--- a/package.json
+++ b/package.json
@@ -4,25 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-<<<<<<< HEAD
-=======
     "start": "nodemon ./app.js",
->>>>>>> 93d4b97148c8c2228456240575c05410ca73804b
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
-    "morgan": "^1.9.1"
-=======
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "html-template-tag": "^3.2.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2"
->>>>>>> 93d4b97148c8c2228456240575c05410ca73804b
   }
 }
